# newsletter

./: .env  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
actions/: audit-on-push.yml  general.yml  sheduled-audit.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
