[package]
name = "newsletter"
version = "0.1.0"
authors = ["EJ Junger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.2.1"
tracing-actix-web = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
serde = { version = "1.0.145", features = ["derive"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
chrono = "0.4.15"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }

# [dependencies.sqlx]
# version = "0.6"
# default-features = false
# features = [
#     "runtime-actix-rustls",
#     "macros",
#     "postgres",
#     "uuid",
#     "chrono",
#     "migrate",
#     "offline",
# ]

[dev-dependencies]
reqwest = "0.11.12"

